/*================================================================================   
 *    Date: 
 *    Author: nwuking
 *    Email: nwuking@qq.com  
================================================================================*/

#ifndef YTALK_AUTHSERVICE_H
#define YTALK_AUTHSERVICE_H

namespace YTalk
{

//TODO

}    // namespace YTalk

#endif